fix: changed color of gilepond list items in light mode as it still was in dark mode even if light mode was active

--- a/src/main/sass/foundation/sidebar.sass
+++ b/src/main/sass/foundation/sidebar.sass
@@ -120,3 +120,9 @@
 .filepond--drop-label
     @include theme()
         color: theme-get('filepond--drop-label')
+
+// The text color of the drop label
+.filepond--file-wrapper
+    border-radius: 5px
+    @include theme()
+        background: theme-get('filepond--list-background')
